--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 * 入力データの構造図を描画する
 * 出力データの構造図を描画する
 * 入出力のデータの対応関係から上記２つを統合し、新たな構造図を導出する
-* 統合した構造図からプログラムを導出する
+* 導出した構造上に必要なコード片を配置しプログラムを完成させる
 
 ---
 ### 例題の出力ファイルの表現の例
@@ -143,7 +143,16 @@
 * データ構造とプログラム構造の間を行き来して両方を改善していく
 
 ---
+### 演習問題1
+- - -
+* <a href="./text/products_services.txt" download>products_services.txt</a>ファイルを読み込み、標準出力に[次の出力](./text/amount_products_services.txt)を出力するプログラムを作成せよ
 
+---
+### 演習問題2
+- - -
+* 浮動小数点数のジャクソン構造図を書いてみよ
+
+---
 ### ご清聴ありがとうございました
 
 </script>
